# keremsert-tripmate

./: README.md  package-lock.json  package.json
backend/: .env  Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Navbar.css  Navbar.jsx
frontend/src/pages/: AddTrip.css  AddTrip.jsx  Favorites.css  Favorites.jsx  Home.css  Home.jsx  SignIn.css  SignIn.jsx  SignUp.jsx  Trips.css  Trips.jsx
