[package]
name = "trip-mate-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
dotenv = "0.15"
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "8.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
